# dro_pep

./: .gitignore  CLAUDE.md  LICENSE  README.md  dro-pep_gd_nag.py  dro_pep_gd_nag.py  plot.ipynb  pyproject.toml
lyapunov_pep/: interpolation_conditions.py  lyapunov_pep_gd.py  sample_generation.py
lyapunov_pep/agd/: accel_bad_example.py  algorithms.py  interpolation_conditions.py  lyanpuov_pep_agd.py  lyapunov_pep_agd.py  sample_generation.py
lyapunov_pep/archive/: ADMM_Attempt_dual.m  admm.m  admm.py  draft_lyap_search.m
lyapunov_pep/gd/: algorithms.py  interpolation_conditions.py  lyapunov_pep_agd.py  lyapunov_pep_gd.py  sample_generation.py  (+1 more)
src/: DRO-PEP-test.ipynb  algorithm.py  bm_ipopt.py  burer_monteiro_pep.py  burer_monteiro_pep_scalable.py  diffcp_patch.py  dro_dual.py  dro_dual_test.py  dro_reform_test.py  dro_reformulator.py  generate_sample.py  run_dro_experiment.py  run_experiment.py  run_hdro_experiment.sh  run_hpep_experiment.sh  run_ldro_experiment.sh  run_learn_l2o_lasso.sh  run_learn_l2o_logreg.sh  run_learn_l2o_quad.sh  run_learn_lasso.sh  run_learn_logreg.sh  run_learn_pdlp.sh  run_learn_quad.sh  run_learning_experiment.py  run_learning_l2o_experiment.py  run_logdro_experiment.sh  run_lyap_experiment.py  run_out_of_sample.py  run_pep_experiment.py  run_qdro_experiment.sh  run_qpep_experiment.sh  run_sample_experiment.py  sdp_data_matrix.py  sdp_data_matrix_scalable.py  sdp_relaxation.py  test_canonicalizer.py  test_clarabel_reform.py  test_clustered_cvar.py  test_dro_clarabel.py  test_gap_calc.py  (+2 more)
tests/: test_pep_qcqp.py  test_pep_simple.py
(+383 files in other folders)
