[project]
name = "dro-pep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.5.3",
    "gurobipy>=11.0.3",
    "pepit>=0.3.2",
    "clarabel",
    "diffcp @ git+https://github.com/cvxgrp/diffcp.git@master",
    "jax",
    "scipy",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.1",
    "hydra-core>=1.3.2",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pytest>=8.0.0",
    "cvxpylayers>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
]

[tool.ruff]
line-length = 100
